--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   math_expressions: ^2.0.0
   geolocator: ^13.0.3
   table_calendar: ^3.0.9
+  flutter_colorpicker: ^1.0.3
 
 dev_dependencies:
   flutter_test:
