--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   geolocator: ^13.0.3
   table_calendar: ^3.0.9
   flutter_colorpicker: ^1.0.3
+  firebase_core: ^3.13.0
 
 dev_dependencies:
   flutter_test:
