--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,11 @@ dependencies:
   table_calendar: ^3.0.9
   flutter_colorpicker: ^1.0.3
   firebase_core: ^3.13.0
+  cloud_firestore: ^5.6.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
