--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,6 @@
 pluginManagement {
     def flutterSdkPath = {
-        //def properties = new Properties()
+        def properties = new Properties()
         file("local.properties").withInputStream { properties.load(it) }
         def flutterSdkPath = properties.getProperty("flutter.sdk")
         assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
@@ -18,11 +18,11 @@ pluginManagement {
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" version "8.1.0" apply false
+    id "com.android.application" version "8.6.0" apply false  // Actualizado a 8.2.1
     // START: FlutterFire Configuration
-    id "com.google.gms.google-services" version "4.3.15" apply false
+    id "com.google.gms.google-services" version "4.4.1" apply false  // Actualizado a 4.4.3
     // END: FlutterFire Configuration
-    id "org.jetbrains.kotlin.android" version "1.8.22" apply false
+    id "org.jetbrains.kotlin.android" version "1.9.22" apply false  // Actualizado a 1.9.22
 }
 
 include ":app"
